test/spec_vectors/i32/fail/module_21.wat
(module (func $type-binary-1st-operand-empty-in-block (i32.const 0) (i32.const 0) (block (i32.add) (drop))))